Resolve IntelliJ code inspections across the codebase
A repo-wide IntelliJ inspection sweep. No production behavior change: every
edit is a mechanical test cleanup, a nullness annotation, or a narrow
suppression of an intentional pattern. The two main-source changes are
comment-only suppressions (MonitorMapping ConstantValue, Cp56Time2a
ResultOfMethodCallIgnored).

Fixes (test sources):
- drop redundant never-thrown `throws IOException` on private helpers
- assertTrue(x instanceof T) -> assertInstanceOf; assertEquals(null, x) ->
  assertNull; assertTrue(!c.isEmpty()) -> assertFalse(c.isEmpty())
- collect(Collectors.toList()) -> toList()
- remove dead isBound() helpers and their now-unused `bound` fields
- () -> x.get() -> x::get; legacy switch -> enhanced switch; explicit
  <ServerEvent> -> <>; drop an unwarranted @Nullable on a never-null method

Nullness (test sources): an AtomicReference<T> holding a deferred value is now
AtomicReference<@Nullable T>, with requireNonNull(...) at the deref sites that
rely on it having been set.

Suppressions: deliberate null-argument tests that exercise a @NotNull contract
carry a method-level @SuppressWarnings("DataFlowIssue") rather than silencing
the inspection project-wide; intentional always-true conditions and a
validate-by-side-effect call are suppressed inline.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>